# grafaman

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.MD  Rocket.toml
src/: handlers.rs  main.rs  structs.rs
